--- a/index.html
+++ b/index.html
@@ -7,64 +7,259 @@
 
   <style>
     *{box-sizing:border-box;}
-    body{margin:0;font-family:Arial, Helvetica, sans-serif;background:linear-gradient(180deg,#0f0f0f,#000);color:white;display:flex;justify-content:center;align-items:center;min-height:100vh;}
-    .home{width:95%;max-width:500px;background:#111;padding:35px 25px;border-radius:20px;text-align:center;box-shadow:0 0 40px rgba(0,0,0,0.7);}
-    .logo{font-size:40px;font-weight:bold;color:#ff0000;margin-bottom:15px;}
-    .sub{color:#00ff88;font-size:20px;margin-bottom:20px;font-weight:bold;}
-    .btn{width:100%;padding:16px;background:#ff0000;color:white;border:none;border-radius:15px;font-size:16px;cursor:pointer;margin-bottom:20px;transition:0.3s;}
-    .btn:hover{background:#cc0000;transform:scale(1.03);}
-    .global-online{color:#00ff88;font-size:15px;margin-top:10px;}
-    .video-box{width:100%;background:#d9d9d9;border-radius:12px;overflow:hidden;position:relative;margin-bottom:20px;}
-    .video-wrapper{position:relative;width:100%;padding-top:56.25%;}
-    .video-wrapper iframe,.video-wrapper video{position:absolute;top:0;left:0;width:100%;height:100%;border:none;object-fit:cover;}
-    .botao-container {display: flex;justify-content: space-between;gap: 10px;}
-    .botao-container .btn {width: 48%;}
+
+    body{
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:linear-gradient(180deg,#0f0f0f,#000);
+      color:white;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+    }
+
+    .home{
+      width:95%;
+      max-width:500px;
+      background:#111;
+      padding:35px 25px;
+      border-radius:20px;
+      text-align:center;
+      box-shadow:0 0 40px rgba(0,0,0,0.7);
+    }
+
+    .logo{
+      font-size:40px;
+      font-weight:bold;
+      color:#ff0000;
+      margin-bottom:15px;
+    }
+
+    .sub{
+      color:#00ff88;
+      font-size:20px;
+      margin-bottom:20px;
+      font-weight:bold;
+    }
+
+    .btn{
+      width:100%;
+      padding:16px;
+      background:#ff0000;
+      color:white;
+      border:none;
+      border-radius:15px;
+      font-size:16px;
+      cursor:pointer;
+      margin-bottom:20px;
+      transition:0.3s;
+    }
+
+    .btn:hover{
+      background:#cc0000;
+      transform:scale(1.03);
+    }
+
+    .global-online{
+      color:#00ff88;
+      font-size:15px;
+      margin-top:10px;
+    }
+
+    .video-box{
+      width:100%;
+      background:#d9d9d9;
+      border-radius:12px;
+      overflow:hidden;
+      position:relative;
+      margin-bottom:20px;
+    }
+
+    .video-wrapper{
+      position:relative;
+      width:100%;
+      padding-top:56.25%;
+    }
+
+    .video-wrapper iframe,
+    .video-wrapper video{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      border:none;
+      object-fit:cover;
+    }
+
+    .botao-container {
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+    }
+
+    .botao-container .btn {
+      width: 48%;
+    }
+
     .hidden{display:none;}
-    .login, .card{width:95%;max-width:600px;background:#181818;padding:25px;border-radius:16px;text-align:center;box-shadow:0 0 25px rgba(0,0,0,0.6);}
-    input{width:100%;padding:14px;border:none;border-radius:10px;background:#2a2a2a;color:white;font-size:14px;margin-bottom:12px;}
-    .chat{background:#111;border-radius:12px;padding:15px;max-height:280px;display:flex;flex-direction:column;margin-bottom:15px;}
+
+    .login, .card{
+      width:95%;
+      max-width:600px;
+      background:#181818;
+      padding:25px;
+      border-radius:16px;
+      text-align:center;
+      box-shadow:0 0 25px rgba(0,0,0,0.6);
+    }
+
+    input{
+      width:100%;
+      padding:14px;
+      border:none;
+      border-radius:10px;
+      background:#2a2a2a;
+      color:white;
+      font-size:14px;
+      margin-bottom:12px;
+    }
+
+    .chat{
+      background:#111;
+      border-radius:12px;
+      padding:15px;
+      max-height:280px;
+      display:flex;
+      flex-direction:column;
+      margin-bottom:15px;
+    }
+
     #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
-    .msg{background:#222;padding:8px 12px;border-radius:8px;margin-bottom:8px;font-size:13px;word-break:break-word;}
+
+    .msg{
+      background:#222;
+      padding:8px 12px;
+      border-radius:8px;
+      margin-bottom:8px;
+      font-size:13px;
+      word-break:break-word;
+    }
+
     .msg strong{color:#e50914;}
-    .btn-sair{width:100%;padding:12px;background:#444;color:white;border:none;border-radius:10px;font-size:14px;cursor:pointer;}
-    #transferirDonoModal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.8);justify-content:center;align-items:center;}
-    .modal-content{background:#222;padding:20px;border-radius:12px;text-align:center;color:white;width:80%;max-width:400px;}
-    #usuariosOnlineList{list-style:none;padding:0;}
-    #usuariosOnlineList li{margin:8px 0;padding:8px;background:#333;border-radius:6px;cursor:pointer;transition:background 0.3s;}
-    #usuariosOnlineList li:hover{background:#555;}
+
+    .btn-sair{
+      width:100%;
+      padding:12px;
+      background:#444;
+      color:white;
+      border:none;
+      border-radius:10px;
+      font-size:14px;
+      cursor:pointer;
+    }
+
+    .header-sala{
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .header-sala .nome-com-coroa{
+      font-size: 28px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .header-sala .corona{
+      font-size: 28px;
+      color: gold;
+      margin-right: 10px;
+    }
+
+    .header-sala #onlineInfo{
+      font-size: 16px;
+      color: #ccc;
+    }
+
+    .creator-info{
+      margin-top: 20px;
+      font-size: 14px;
+      color: #ccc;
+    }
+
+    .creator-info a{
+      color: #800080; 
+      text-decoration: none;
+    }
+
+    .creator-info a:hover{
+      text-decoration: underline;
+    }
+
+    #transferirDonoModal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      color: white;
+      width: 80%;
+      max-width: 400px;
+    }
+
+    #usuariosOnlineList {
+      list-style: none;
+      padding: 0;
+    }
+
+    #usuariosOnlineList li {
+      margin: 8px 0;
+      padding: 8px;
+      background: #333;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    #usuariosOnlineList li:hover {
+      background: #555;
+    }
   </style>
 </head>
 <body>
 
-<!-- HOME -->
 <div class="home" id="homeBox">
   <div class="logo">LOVEZIN</div>
   <div class="sub">Como funciona?</div>
-  <p>
-    🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
-    🔐 Crie ou entre em uma sala usando uma senha.<br>
-    Só quem souber entra!
-  </p>
+  <p>🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>🔐 Crie ou entre em uma sala usando uma senha.<br> Só quem souber entra!</p>
   <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
-  <div class="global-online" id="totalOnlineGlobal">
-    Usuários no site: 0
-  </div>
-
-  <!-- Vídeo na tela inicial -->
+  <div class="global-online" id="totalOnlineGlobal">Usuários no site: 0</div>
   <div class="video-box">
     <div class="video-wrapper" id="videoAreaHome">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/sX5R9yC27Bk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
-
-  <!-- Informações do Criador -->
   <div class="creator-info">
     Criado por <strong>Isac Santos</strong><br>
     Instagram: <a href="https://www.instagram.com/lovezin.vuh/" target="_blank">@lovezin.vuh</a>
   </div>
 </div>
 
-<!-- LOGIN -->
 <div class="login hidden" id="loginBox">
   <h2>🔐 Entrar na Sala</h2>
   <input type="text" id="nomeUsuario" placeholder="Seu nome">
@@ -73,7 +268,6 @@
   <button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
 </div>
 
-<!-- SALA -->
 <div class="card hidden" id="salaBox">
   <div class="header-sala">
     <div class="nome-com-coroa">
@@ -88,11 +282,10 @@
     <button class="btn" id="btnEnviarVideo" onclick="carregarVideo(linkInput.value)">Enviar Vídeo</button>
     <button class="btn" id="btnMinimizarChat">Minimizar Chat</button>
     <button class="btn hidden" id="btnAbrirChat">Abrir Chat</button>
-    <button class="btn" id="btnVerParticipantes" onclick="verParticipantes()">Ver Participantes</button>
   </div>
 
   <div class="video-box">
-    <div class="video-wrapper" id="videoAreaSala"></div> <!-- Vídeo exclusivo para a sala -->
+    <div class="video-wrapper" id="videoAreaSala"></div> 
   </div>
 
   <h3>Chat</h3>
@@ -102,15 +295,15 @@
     <button class="btn" id="btnEnviarMsg">Enviar</button>
   </div>
 
+  <button class="btn" id="btnTransferirDono" onclick="abrirModalTransferirDono()">Transferir Dono</button>
   <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
 </div>
 
-<!-- Modal de Participantes -->
 <div id="transferirDonoModal">
   <div class="modal-content">
-    <h2>Participantes da Sala:</h2>
+    <h2>Escolha um novo dono:</h2>
     <ul id="usuariosOnlineList"></ul>
-    <button class="btn" onclick="fecharModal()">Fechar</button>
+    <button class="btn" onclick="fecharModal()">Cancelar</button>
   </div>
 </div>
 
@@ -263,7 +456,7 @@
   }
 
   function carregarVideo(link){
-    videoAreaSala.innerHTML = "";
+    videoAreaSala.innerHTML = ""; 
     if(link.includes("youtu")){
       let id = "";
       if(link.includes("watch?v=")){
@@ -284,35 +477,10 @@
     }
   }
 
-  async function verParticipantes(){
-    if(nomeLocal !== donoSala) {
-      alert("Somente o dono pode ver a lista de participantes.");
-      return;
-    }
+  // Função de minimizar o chat
+  const btnMinimizarChat = document.getElementById("btnMinimizarChat");
+  const btnAbrirChat = document.getElementById("btnAbrirChat");
 
-    let snap = await getDoc(salaRef);
-    if (!snap.exists()) return;
-
-    let dados = snap.data();
-    let listaParticipantes = dados.online || [];
-
-    let participantesList = document.getElementById("usuariosOnlineList");
-    participantesList.innerHTML = "";
-
-    listaParticipantes.forEach(participante => {
-      let li = document.createElement("li");
-      li.innerText = participante;
-      participantesList.appendChild(li);
-    });
-
-    document.getElementById("transferirDonoModal").style.display = "flex";
-  }
-
-  function fecharModal(){
-    document.getElementById("transferirDonoModal").style.display = "none";
-  }
-
-  // Minimizar/abrir chat
   btnMinimizarChat.onclick = () => {
     chatBox.style.display = "none";
     chatInput.style.display = "none";
@@ -328,6 +496,36 @@
     btnMinimizarChat.style.display = "block";
     btnAbrirChat.style.display = "none";
   };
+
+  function abrirModalTransferirDono() {
+    transferirDonoModal.style.display = "flex";
+    listarUsuariosOnline();
+  }
+
+  function listarUsuariosOnline() {
+    let usuariosList = document.getElementById("usuariosOnlineList");
+    usuariosList.innerHTML = "";
+    const usuariosOnline = document.querySelectorAll(".online");
+
+    usuariosOnline.forEach(usuario => {
+      let listItem = document.createElement("li");
+      listItem.textContent = usuario.textContent;
+      listItem.onclick = () => transferirDono(usuario.textContent);
+      usuariosList.appendChild(listItem);
+    });
+  }
+
+  function transferirDono(novoDono) {
+    updateDoc(salaRef, { dono: novoDono }).then(() => {
+      donoSala = novoDono;
+      nomeSala.innerText = donoSala;
+      fecharModal();
+    });
+  }
+
+  function fecharModal() {
+    transferirDonoModal.style.display = "none";
+  }
 </script>
 
 </body>
