--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
     Usuários no site: 0
   </div>
 
-  <!-- Vídeo na tela inicial -->
+<!-- Vídeo incorporado na tela inicial -->
   <div class="video-box">
-    <div class="video-wrapper" id="videoAreaHome">
-      <iframe width="560" height="315" id="homeVideo" src="https://youtu.be/CVz492o65MU?si=iFJYCvzoJHj3t6pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="video-wrapper" id="videoAreaSala">
+      <iframe src="https://www.youtube.com/embed/CVz492o65MU?si=yeooCEKg6JZiyEVg" allowfullscreen></iframe>
     </div>
   </div>
 
