--- a/index.html
+++ b/index.html
@@ -6,193 +6,58 @@
   <title>LOVEZIN</title>
 
   <style>
-    *{box-sizing:border-box;}
+    * { box-sizing: border-box; }
 
-    body{
-      margin:0;
-      font-family:Arial, Helvetica, sans-serif;
-      background:linear-gradient(180deg,#0f0f0f,#000);
-      color:white;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      min-height:100vh;
-    }
-
-    .home{
-      width:95%;
-      max-width:500px;
-      background:#111;
-      padding:35px 25px;
-      border-radius:20px;
-      text-align:center;
-      box-shadow:0 0 40px rgba(0,0,0,0.7);
-    }
-
-    .logo{
-      font-size:40px;
-      font-weight:bold;
-      color:#ff0000;
-      margin-bottom:15px;
-    }
-
-    .sub{
-      color:#00ff88;
-      font-size:20px;
-      margin-bottom:20px;
-      font-weight:bold;
-    }
-
-    .btn{
-      width:100%;
-      padding:16px;
-      background:#ff0000;
-      color:white;
-      border:none;
-      border-radius:15px;
-      font-size:16px;
-      cursor:pointer;
-      margin-bottom:20px;
-      transition:0.3s;
-    }
-
-    .btn:hover{
-      background:#cc0000;
-      transform:scale(1.03);
-    }
-
-    .global-online{
-      color:#00ff88;
-      font-size:15px;
-      margin-top:10px;
-    }
-
-    .video-box{
-      width:100%;
-      background:#d9d9d9;
-      border-radius:12px;
-      overflow:hidden;
-      position:relative;
-      margin-bottom:20px;
-    }
-
-    .video-wrapper{
-      position:relative;
-      width:100%;
-      padding-top:56.25%;
-    }
-
-    .video-wrapper iframe,
-    .video-wrapper video{
-      position:absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-      border:none;
-      object-fit:cover;
-    }
-
-    /* Estilo para os botões lado a lado */
-    .botao-container {
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-    }
-
-    .botao-container .btn {
-      width: 48%; /* Torna os botões menores e com espaço entre eles */
-    }
-
-    /* ===== LOGIN E SALA ===== */
-    .hidden{display:none;}
-
-    .login, .card{
-      width:95%;
-      max-width:600px;
-      background:#181818;
-      padding:25px;
-      border-radius:16px;
-      text-align:center;
-      box-shadow:0 0 25px rgba(0,0,0,0.6);
-    }
-
-    input{
-      width:100%;
-      padding:14px;
-      border:none;
-      border-radius:10px;
-      background:#2a2a2a;
-      color:white;
-      font-size:14px;
-      margin-bottom:12px;
-    }
-
-    .btn-secondary{
-      background:#333;
-    }
-
-    .chat{
-      background:#111;
-      border-radius:12px;
-      padding:15px;
-      max-height:280px;
-      display:flex;
-      flex-direction:column;
-      margin-bottom:15px;
-    }
-
-    #chatBox{flex:1;overflow-y:auto;margin-bottom:10px;}
-
-    .msg{
-      background:#222;
-      padding:8px 12px;
-      border-radius:8px;
-      margin-bottom:8px;
-      font-size:13px;
-      word-break:break-word;
-    }
-
-    .msg strong{color:#e50914;}
-
-    .btn-sair{
-      width:100%;
-      padding:12px;
-      background:#444;
-      color:white;
-      border:none;
-      border-radius:10px;
-      font-size:14px;
-      cursor:pointer;
-    }
-
-    .header-sala{
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    /* Estilo para a coroa antes do nome */
-    .header-sala .nome-com-coroa{
-      font-size: 28px;
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: linear-gradient(180deg, #0f0f0f, #000);
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-weight: bold;
-      margin-bottom: 10px;
+      min-height: 100vh;
     }
 
-    .header-sala .corona{
-      font-size: 28px;
-      color: gold;
-      margin-right: 10px;
+    .login, .card {
+      width: 100%;
+      max-width: 600px;
+      background: #181818;
+      padding: 25px;
+      border-radius: 16px;
+      text-align: center;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
     }
 
-    .header-sala #onlineInfo{
+    input {
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 10px;
+      background: #2a2a2a;
+      color: white;
+      font-size: 14px;
+      margin-bottom: 12px;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 16px;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 15px;
       font-size: 16px;
-      color: #ccc;
+      cursor: pointer;
+      margin-bottom: 20px;
+      transition: 0.3s;
     }
 
-    /* Créditos */
+    .btn:hover {
+      background: #45a049;
+      transform: scale(1.03);
+    }
+
     .creditos {
       margin-top: 20px;
       font-size: 14px;
@@ -203,67 +68,161 @@
       color: #00ff88;
       text-decoration: none;
     }
+
+    .hidden {
+      display: none;
+    }
+
+    .sala-container {
+      position: relative;
+      padding: 30px;
+      background: #212121;
+      border-radius: 20px;
+      width: 100%;
+      max-width: 800px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
+      margin-top: 20px;
+    }
+
+    .sala-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+    .header-info {
+      font-size: 18px;
+      color: #ddd;
+    }
+
+    .video-container {
+      margin-top: 20px;
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* Proporção 16:9 */
+      background: #000;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .video-container iframe, .video-container video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .chat-container {
+      display: flex;
+      flex-direction: column;
+      max-height: 300px;
+      overflow-y: auto;
+      margin-top: 20px;
+      background: #333;
+      padding: 15px;
+      border-radius: 10px;
+    }
+
+    .chat-box {
+      flex-grow: 1;
+      overflow-y: auto;
+      margin-bottom: 15px;
+    }
+
+    .chat-input-container {
+      display: flex;
+    }
+
+    .chat-input {
+      flex-grow: 1;
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      background: #444;
+      color: white;
+      margin-right: 10px;
+    }
+
+    .chat-send-btn {
+      padding: 12px;
+      background: #ff5722;
+      color: white;
+      border-radius: 10px;
+      cursor: pointer;
+      border: none;
+      transition: 0.3s;
+    }
+
+    .chat-send-btn:hover {
+      background: #e64a19;
+    }
+
+    .msg {
+      margin: 10px 0;
+      padding: 10px;
+      background: #3e3e3e;
+      border-radius: 10px;
+    }
+
+    .msg strong {
+      color: #ff5722;
+    }
+
+    /* Novo estilo para contador de usuários */
+    .contador-online {
+      font-size: 18px;
+      color: #00ff88;
+      margin-top: 20px;
+      text-align: center;
+    }
+
   </style>
 </head>
 <body>
 
-<!-- HOME -->
-<div class="home" id="homeBox">
-  <div class="logo">LOVEZIN</div>
-  <div class="sub">Como funciona?</div>
-  <p>
-    🎬 Entre em um mundo de vídeos privados juntos!💞<br><br>
-    🔐 Crie ou entre em uma sala usando uma senha.<br>
-    Só quem souber entra!
-  </p>
-  <button class="btn" onclick="abrirLogin()">Entrar na Sala</button>
-  <div class="global-online" id="totalOnlineGlobal">
-    Usuários no site: 0
-  </div>
+<!-- LOGIN (Tela de login/registro) -->
+<div class="login" id="loginBox">
+  <h2>Cadastro</h2>
+  <input type="text" id="nomeUsuario" placeholder="Seu nome">
+  <input type="password" id="senhaSala" placeholder="Senha da sala">
+  <button class="btn" id="btnCriarSala">Criar Sala</button>
+  <button class="btn" id="btnEntrarSala">Entrar na Sala</button>
+
+  <!-- Contador de usuários online agora abaixo do botão de login -->
+  <div class="contador-online" id="contadorOnline">Usuários online: 0</div>
 
   <div class="creditos">
     Criado por <strong>Isac Santos</strong> | Instagram: <a href="https://www.instagram.com/lovezin.vuh" target="_blank">lovezin.vuh</a>
   </div>
 </div>
 
-<!-- LOGIN -->
-<div class="login hidden" id="loginBox">
-  <h2>🔐 Entrar na Sala</h2>
-  <input type="text" id="nomeUsuario" placeholder="Seu nome">
-  <input type="password" id="senhaSala" placeholder="Senha da sala">
-  <button class="btn" id="btnEntrar">Entrar</button>
-  <button class="btn btn-secondary" onclick="voltarHome()">Voltar</button>
-</div>
-
 <!-- SALA -->
-<div class="card hidden" id="salaBox">
-  <div class="header-sala">
-    <div class="nome-com-coroa">
-      <span id="corona" class="corona"></span>
-      <span id="nomeSala">Robert</span>
-    </div>
+<div class="sala-container hidden" id="salaBox">
+  <div class="sala-header">
+    <div class="header-info" id="nomeSala">Robert</div>
     <div id="onlineInfo">Online na sala: 1</div>
   </div>
 
-  <input type="text" id="linkInput" placeholder="Link YouTube, TikTok, Instagram, Stories ou .mp4">
-  <div class="botao-container">
-    <button class="btn" id="btnEnviarVideo" onclick="carregarVideo(linkInput.value)">Enviar Vídeo</button>
-    <button class="btn" id="btnMinimizarChat">Minimizar Chat</button>
-    <button class="btn hidden" id="btnAbrirChat">Abrir Chat</button>
+  <!-- Campo de vídeo -->
+  <input type="text" id="videoLink" placeholder="Link do vídeo (YouTube, TikTok, etc.)" style="width: 100%; padding: 14px; border: none; border-radius: 10px; background: #444; color: white; font-size: 14px; margin-bottom: 12px;">
+  <button class="btn" id="btnEnviarVideo">Enviar Vídeo</button>
+
+  <!-- Video Container -->
+  <div class="video-container" id="videoArea"></div>
+
+  <!-- Chat -->
+  <div class="chat-container hidden" id="chatContainer">
+    <div class="chat-box" id="chatBox"></div>
+    <div class="chat-input-container">
+      <input type="text" class="chat-input" id="chatInput" placeholder="Digite uma mensagem">
+      <button class="chat-send-btn" id="btnEnviarMsg">Enviar</button>
+    </div>
   </div>
 
-  <div class="video-box">
-    <div class="video-wrapper" id="videoArea"></div>
-  </div>
-
-  <h3>Chat</h3>
-  <div class="chat">
-    <div id="chatBox"></div>
-    <input type="text" id="chatInput" placeholder="Mensagem">
-    <button class="btn" id="btnEnviarMsg">Enviar</button>
-  </div>
-
-  <button class="btn-sair" onclick="sairSala()">Sair da Sala</button>
+  <!-- Botões -->
+  <button class="btn" onclick="sairSala()">Sair da Sala</button>
 </div>
 
 <audio id="notifSound">
@@ -293,9 +252,6 @@
   let ultimoVideo = "";
   let ultimoChat = 0;
 
-  window.abrirLogin = () => { homeBox.classList.add("hidden"); loginBox.classList.remove("hidden"); }
-  window.voltarHome = () => { loginBox.classList.add("hidden"); homeBox.classList.remove("hidden"); }
-
   const globalRef = doc(db, "site", "online");
 
   async function entrarSite(){
@@ -310,11 +266,11 @@
   onSnapshot(globalRef, (snap) => {
     let d = snap.data();
     if(d){
-      totalOnlineGlobal.innerText = "Usuários no site: " + d.total;
+      document.getElementById("contadorOnline").innerText = "Usuários online: " + d.total;
     }
   });
 
-  btnEntrar.onclick = async () => {
+  btnCriarSala.onclick = async () => {
     let senha = senhaSala.value.trim();
     let nome = nomeUsuario.value.trim();
     if(!senha || !nome){ alert("Preencha tudo"); return; }
@@ -346,12 +302,58 @@
 
       onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
 
-      // Atualiza o nome e a coroa
       let nomeSalaElement = document.getElementById("nomeSala");
       nomeSalaElement.innerHTML = donoSala;
 
-      let coronaElement = document.getElementById("corona");
-      coronaElement.innerHTML = donoSala === nomeLocal ? "👑" : "";
+      if(nomeLocal !== donoSala){
+        btnEnviarVideo.disabled = true;
+      } else {
+        btnEnviarVideo.disabled = false;
+      }
+
+      if(dados.chat && dados.chat.length !== ultimoChat){
+        ultimoChat = dados.chat.length;
+        mostrarChat(dados.chat);
+      }
+
+      if(dados.video && dados.video !== ultimoVideo){
+        ultimoVideo = dados.video;
+        carregarVideo(dados.video);
+      }
+    });
+  };
+
+  btnEntrarSala.onclick = async () => {
+    let senha = senhaSala.value.trim();
+    let nome = nomeUsuario.value.trim();
+    if(!senha || !nome){ alert("Preencha tudo"); return; }
+
+    nomeLocal = nome;
+    salaRef = doc(db, "salas", senha);
+
+    let snap = await getDoc(salaRef);
+    if(!snap.exists()){ alert("Sala não encontrada"); return; }
+
+    donoSala = snap.data().dono;
+
+    await updateDoc(salaRef, {
+      online: arrayUnion(nomeLocal),
+      chat: arrayUnion({nome: "Sistema", msg: nomeLocal + " entrou na sala"})
+    });
+
+    loginBox.classList.add("hidden");
+    salaBox.classList.remove("hidden");
+
+    onSnapshot(salaRef, (docSnap) => {
+      let dados = docSnap.data();
+      if(!dados) return;
+
+      donoSala = dados.dono;
+
+      onlineInfo.innerText = "Online na sala: " + (dados.online ? dados.online.length : 0);
+
+      let nomeSalaElement = document.getElementById("nomeSala");
+      nomeSalaElement.innerHTML = donoSala;
 
       if(nomeLocal !== donoSala){
         btnEnviarVideo.disabled = true;
@@ -379,11 +381,10 @@
   };
 
   btnEnviarVideo.onclick = async () => {
-    if(nomeLocal !== donoSala){ alert("Só o dono pode enviar vídeo"); return; }
-    let link = linkInput.value.trim();
+    let link = videoLink.value.trim();
     if(!link) return;
     await updateDoc(salaRef, {video: link});
-    linkInput.value = "";
+    videoLink.value = "";
   };
 
   async function sairSala(){
@@ -436,26 +437,6 @@
       videoArea.appendChild(video);
     }
   }
-
-  // Função de minimizar o chat
-  const btnMinimizarChat = document.getElementById("btnMinimizarChat");
-  const btnAbrirChat = document.getElementById("btnAbrirChat");
-
-  btnMinimizarChat.onclick = () => {
-    chatBox.style.display = "none";
-    chatInput.style.display = "none";
-    btnEnviarMsg.style.display = "none";
-    btnMinimizarChat.style.display = "none";
-    btnAbrirChat.style.display = "block";
-  };
-
-  btnAbrirChat.onclick = () => {
-    chatBox.style.display = "block";
-    chatInput.style.display = "block";
-    btnEnviarMsg.style.display = "block";
-    btnMinimizarChat.style.display = "block";
-    btnAbrirChat.style.display = "none";
-  };
 </script>
 
 </body>
