--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      flex-direction: column;
     }
 
     .login, .card {
@@ -178,6 +179,17 @@
       text-align: center;
     }
 
+    /* Estilo para o player de rádio */
+    .radio-container {
+      margin-top: 20px;
+      width: 100%;
+      max-width: 600px;
+      background: #181818;
+      padding: 20px;
+      border-radius: 16px;
+      text-align: center;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+    }
   </style>
 </head>
 <body>
@@ -192,6 +204,14 @@
 
   <!-- Contador de usuários online agora abaixo do botão de login -->
   <div class="contador-online" id="contadorOnline">Usuários online: 0</div>
+
+  <!-- Rádio -->
+  <div class="radio-container">
+    <audio id="radioAudio" autoplay loop controls>
+      <source src="https://jpdofunk3.com.br/stream/blunntdj" type="audio/mp3">
+      Seu navegador não suporta a tag de áudio.
+    </audio>
+  </div>
 
   <div class="creditos">
     Criado por <strong>Isac Santos</strong> | Instagram: <a href="https://www.instagram.com/lovezin.vuh" target="_blank">lovezin.vuh</a>
