--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
     .hidden{display:none;}
     .contador-online{font-size:18px;color:#00ff88;margin-top:10px;}
 
+    .creator-info {
+      margin-top: 15px;
+      font-size: 14px;
+      color: #bbb;
+    }
+    .creator-info a {
+      color: #00ff88;
+      text-decoration: none;
+    }
+
     /* SALA */
     .sala-container{
       padding:25px;
@@ -159,6 +169,11 @@
   <button class="btn" id="btnEntrarSala">Entrar na Sala</button>
 
   <div class="contador-online" id="contadorOnline">Usuários online: 0</div>
+
+  <div class="creator-info">
+    <p>Criado por: <strong>Isac Santos</strong></p>
+    <p>Instagram: <a href="https://www.instagram.com/lovezin.vuh/" target="_blank" style="color:#00ff88;">@lovezin.vuh</a></p>
+  </div>
 
   <audio autoplay loop controls>
     <source src="https://jpdofunk3.com.br/stream/blunntdj" type="audio/mp3">
